@startuml

title __DATA's Class Diagram__\n

  namespace com.example.thetrempiada {
    namespace data {
      class com.example.thetrempiada.data.BaseActivity {
          {static} + DISCONNECT_TIMEOUT : long
          {static} + GOOGLE_MAPS_API_KEY : String
          {static} + INTENT_EXTRA_NIGHT_MAP : String
          {static} + INTENT_EXTRA_SATELLITE : String
          {static} + SHARED_PREFERENCES_IS_NIGHT_MAP_SWITCH : String
          {static} + SHARED_PREFERENCES_IS_SATELLITE_SWITCH : String
          {static} + SHARED_PREFERENCES_LAST_USER : String
          {static} + SHARED_PREFERENCES_MAP_TYPE : String
          {static} + SHARED_PREFERENCES_REMEMBER_ME : String
          {static} - disconnectCallback : Runnable
          {static} - disconnectHandler : Handler
          - mTouchOutsideView : View
          + dispatchTouchEvent()
          + getOnTouchOutsideViewListener()
          + onUserInteraction()
          + resetDisconnectTimer()
          + setOnTouchOutsideViewListener()
          + stopDisconnectTimer()
          # onCreate()
          # onPause()
          # onResume()
      }
    }
  }
  

  namespace com.example.thetrempiada {
    namespace data {
      interface com.example.thetrempiada.data.BaseActivity.OnTouchOutsideViewListener {
          {abstract} + onTouchOutside()
      }
    }
  }
  

  namespace com.example.thetrempiada {
    namespace data {
      class com.example.thetrempiada.data.PathStorageHelper {
          {static} + _pathDatabase : DatabaseReference
      }
    }
  }
  

  namespace com.example.thetrempiada {
    namespace data {
      class com.example.thetrempiada.data.User {
          - _age : int
          - _description : String
          - _displayName : String
          - _online : boolean
          - _uid : String
          + User()
          + User()
          + User()
          + User()
          + get_age()
          + get_currentLocation()
          + get_description()
          + get_displayName()
          + get_gender()
          + get_uid()
          + get_userType()
          + is_online()
          + set_age()
          + set_currentLocation()
          + set_currentLocation()
          + set_description()
          + set_displayName()
          + set_gender()
          + set_online()
          + set_uid()
          + set_userType()
          - User()
      }
    }
  }
  

  namespace com.example.thetrempiada {
    namespace data {
      class com.example.thetrempiada.data.UserHelper {
          {static} + _userDatabase : DatabaseReference
          {static} + addUserToDatabase()
          {static} + deleteUserFromDatabase()
          {static} + setOnline()
      }
    }
  }
  

  com.example.thetrempiada.data.BaseActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.thetrempiada.data.BaseActivity o-- com.example.thetrempiada.data.BaseActivity.OnTouchOutsideViewListener : mOnTouchOutsideViewListener
  com.example.thetrempiada.data.BaseActivity +-down- com.example.thetrempiada.data.BaseActivity.OnTouchOutsideViewListener
  com.example.thetrempiada.data.User o-- com.example.thetrempiada.data.directionData.LatLng : _currentLocation
  com.example.thetrempiada.data.User o-- com.example.thetrempiada.enums.Gender : _gender
  com.example.thetrempiada.data.User o-- com.example.thetrempiada.enums.UserType : _userType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
